
Thanks!

2.0.0.2010
----------
- Handle RDF:Sequence parsing for feeds such as http://www.kongisking.net. This ensures that
  feeds are properly organised by date in the absence of any date in the feed.
- Smart folder dates fields are now fixed strings representing a time range rather than an actual date.
- Added Italian Localisation. (Thanks to Marcello Teodori).

2.0.0.2009
----------
- Fixed potential database corruption bug introduced in build 2007 when refreshing a feed that
  uses entity characters specified with hexadecimal notation.
- Cmd+W closes Preferences window if it is open, rather than the main window.
- The "About Vienna" window can now be closed with Esc or Cmd+W.
- Reduced height of tabs slightly.
- Holding down Cmd+Alt keys while clicking tab close button closes all tabs.
- Fixed close tab behaviour properly this time.

2.0.0.2008 (BETA 2)
-------------------
- Added final Swedish localisation changes for beta 2.
- Fixed French localisation import error.
- Fix bug with importing OPML files.
- Added 'group folder', 'smart folder' and 'rss folder' attributes to folder class in scripting.
- Added Restore command to restore an article in the Trash Folder back to where it came from.
- Fixed UI update bug when a folder is deleted during a refresh.
- Exported files now have ".opml" extension added to them.
- Smart search folder operators are now limited to "is" and "is not" as "under" is now implied.
- Encode extended characters in HTML article text dragged from the article list view.

2.0.0.2007
----------
- You can now undo/redo Mark All Read, even across multiple folders.
- Article view split bar position is now properly persisted across sessions.
- Disabled proportional folder and article list split bar resizing when the main window is resized.
- Selecting multiple articles now shows multiple articles in the article pane.
- Fixed problem when parsing feeds from http://macintouch.com/rss.xml. Some servers report an